<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SupplyRegister">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/botao_ok"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:onClick="onClickCadastrar"
            android:text="@string/botao_incluir"
            android:textColor="@android:color/white" />

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_posto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/textPosto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/posto_gasolina" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_preco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/textPreco"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/preco_abastecida"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_quilometros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/textQuilometros"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/quilometros_rodados"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_litros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/textLitros"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/litros_abastecidos"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>
